Adding visualisation images, Project_Report.md. Updating README.md and starbucks_capstone_challenge.ipynb.

--- a/starbucks_capstone_challenge.ipynb
+++ b/starbucks_capstone_challenge.ipynb
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,6 +238,89 @@
     "pd.options.display.html.table_schema=True\n",
     "pd.options.display.max_colwidth = 100\n",
     "pd.options.display.max_rows = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from datetime import datetime\n",
+    "import math\n",
+    "import json\n",
+    "%matplotlib inline\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "import lightgbm as lgbm\n",
+    "import imblearn\n",
+    "import sklearn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: scipy\n",
+      "Version: 1.6.2\n",
+      "Summary: SciPy: Scientific Library for Python\n",
+      "Home-page: https://www.scipy.org\n",
+      "Author: None\n",
+      "Author-email: None\n",
+      "License: BSD\n",
+      "Location: c:\\users\\snicconmara\\anaconda3\\lib\\site-packages\n",
+      "Requires: numpy\n",
+      "Required-by: sklearn-pandas, xgboost, statsmodels, shap, seaborn, scikit-plot, scikit-learn, scikit-image, resampy, phik, pandas-profiling, missingno, lightgbm, librosa, imbalanced-learn, ImageHash\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip show scipy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['builtins',\n",
+       " 'builtins',\n",
+       " 'pandas',\n",
+       " 'numpy',\n",
+       " 'math',\n",
+       " 'json',\n",
+       " 'matplotlib.pyplot',\n",
+       " 'seaborn',\n",
+       " 'lightgbm',\n",
+       " 'types',\n",
+       " 'imblearn',\n",
+       " 'sklearn']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import types\n",
+    "def imports():\n",
+    "    for name, val in globals().items():\n",
+    "        if isinstance(val, types.ModuleType):\n",
+    "            yield val.__name__\n",
+    "list(imports())"
    ]
   },
   {
@@ -3152,7 +3235,8 @@
     "- Nulls in ```gender``` filled with 'U' for 'Unknown'\n",
     "- Nulls in ```income``` imputed with median income value and ```income``` datatype converted to int.\n",
     "- ```missing_income``` column created which indicates if ```income``` was Null\n",
-    "- ```age_group``` column created which bins the ages"
+    "- ```age_group``` column created which bins the ages\n",
+    "- ```income_group``` column created which bins the incomes"
    ]
   },
   {
@@ -5144,7 +5228,7 @@
     "The intitial baseline models all produced acuuracy scores between 0.72 and 0.74 with LightGBM producing the best accuracy. I had always intended to run a GridSearch and therefore kept the parameters very basic initially.\n",
     "\n",
     "#### Final Solution\n",
-    "When running the full GridSearchCV with multiple hyperparamters, LightGBM was also the best model overall, producing an accuracy score of 0.74. \"LightGBM is a gradient boosting framework that uses tree based learning algorithms\" [(source)](https://lightgbm.readthedocs.io/en/latest/). LightGBM was likely the best model because it is better in terms of performance an speed and also it \"produces more complex trees by following leaf-wise split approach rather than a level-wise approach\" [(source)](https://www.analyticsvidhya.com/blog/2017/06/which-algorithm-takes-the-crown-light-gbm-vs-xgboost/#:~:text=Better%20accuracy%20than%20any%20other,by%20setting%20the%20max_depth%20parameter.) which allows for better accuracy. I initially experiemented with SMOTE \n",
+    "When running the full GridSearchCV with multiple hyperparamters, LightGBM was also the best model overall, producing an accuracy score of 0.74. \"LightGBM is a gradient boosting framework that uses tree based learning algorithms\" [(source)](https://lightgbm.readthedocs.io/en/latest/). LightGBM was likely the best model because it is better in terms of performance an speed and also it \"produces more complex trees by following leaf-wise split approach rather than a level-wise approach\" [(source)](https://www.analyticsvidhya.com/blog/2017/06/which-algorithm-takes-the-crown-light-gbm-vs-xgboost/#:~:text=Better%20accuracy%20than%20any%20other,by%20setting%20the%20max_depth%20parameter.) which allows for better accuracy.\n",
     "\n",
     "#### Final Model Parameters\n",
     "```LGBMClassifier(class_weight='balanced', feature_fraction=0.7, max_depth=63,n_estimators=200, num_leaves=35, objective='binary',random_state=42, tree_learner='serial')```\n",
